users-groups/podfile-deny-runasUser.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pause-users
  labels:
    app: pause-users
spec:
  containers:
  - name: pause
    image: k8s.gcr.io/pause
    securityContext:
      runAsUser: 1000
