users-groups/ky-mutate-validate-supplemental-groups-must-run-as.yaml
# maartenvdezz & frankwiersma
# 23-06-2021
# Add default supplementalGroups when undefined and validate ranges

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: supplementalGroupsmutatevalidate
  annotations:
    policies.kyverno.io/category: Pod Security (additional Maarten Frank)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Controls the supplemental group applied to some volumes.
spec:
  validationFailureAction: enforce
  background: true
  rules:
  - name: supplementalGroups-mutate-speccontext
    match:
      resources:
        kinds:
        - Pod
    mutate:
      overlay:
        spec:
          securityContext:
            +(supplementalGroups): 101      
  - name: supplementalGroups-validate-speccontext
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: >-
        Allowed ranges groups.
      pattern:
        spec:
          securityContext:
            supplementalGroups: ">100&<110|>120&<150|>200&<210"
