users-groups/ky-validate-supplemental-groups-may-run-as.yaml
# maartenvdezz & frankwiersma
# 23-06-2021
# Validate ranges in case a supplementalGroup is specified, otherwise allow creation without. (mayRunAs behaviour)

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: supplementalGroupsmutatevalidate
  annotations:
    policies.kyverno.io/category: Pod Security (additional Maarten Frank)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Controls the supplemental group applied to some volumes.
spec:
  validationFailureAction: enforce
  background: true
  rules: 
  - name: supplementalGroups-validate-speccontext
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: >-
        Allowed ranges groups.
      pattern:
        spec:
          securityContext:
            supplementalGroups: ">100&<110|>120&<150|>200&<210"
